# lyrae

./: CHANGELOG.rst  CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst  usage.ipynb
tests/: test_lyrae.py
