[tool.poetry]
name = "lyrae"
version = "0.1.0"
description = "Python package that facilitates EDA!"
authors = ["Xudong Yang"]
license = "MIT"
readme = "README.md"
documentation = "https://lyrae.readthedocs.io/en/latest/"
homepage = "https://github.com/xudong-Y/lyrae"
repository = "https://github.com/xudong-Y/lyrae"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
